--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
             <div class="gallery-item h-100">
               <img src="/media/{{d.image}}" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="/media/{{d.image}}" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="/media/{{d.image}}" title="{{d.Name}}" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="/single/{{d.id}}" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
