--- a/templates/gallery-single.html
+++ b/templates/gallery-single.html
@@ -1,8 +1,9 @@
 	{% extends 'base.html' %}
 
 {% block 'content' %}
-
-
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js" integrity="sha512-odNmoc1XJy5x1TMVMdC7EMs3IVdItLPlCeL5vSUPN2llYKMJ2eByTTAIiiuqLg+GdNr9hF6z81p27DArRFKT7A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js">
+    </script>
   <main id="main" data-aos="fade" data-aos-delay="1500">
 
     <!-- ======= End Page Header ======= -->
@@ -28,6 +29,9 @@
               <div class="swiper-slide">
                 <img src="/media/{{data.image}}" alt="">
               </div>
+              <p id="img-link" style="
+    display: none;
+    visibility: hidden;">/media/{{data.image}}</p>
 
 
             </div>
@@ -41,32 +45,10 @@
 
           <div class="col-lg-8">
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
-              <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-              </p>
-              <p>
-                Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
-              </p>
-
-              <div class="testimonial-item">
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
-                <div>
-                  <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                  <h3>Sara Wilsson</h3>
-                  <h4>Designer</h4>
-                </div>
-              </div>
+              <h2>Name</h2>
 
               <p>
-                Impedit ipsum quae et aliquid doloribus et voluptatem quasi. Perspiciatis occaecati earum et magnam animi. Quibusdam non qui ea vitae suscipit vitae sunt. Repudiandae incidunt cumque minus deserunt assumenda tempore. Delectus voluptas necessitatibus est.
-
-              <p>
-                Sunt voluptatum sapiente facilis quo odio aut ipsum repellat debitis. Molestiae et autem libero. Explicabo et quod necessitatibus similique quis dolor eum. Numquam eaque praesentium rem et qui nesciunt.
+{{data.Name}}
               </p>
 
             </div>
@@ -74,16 +56,16 @@
 
           <div class="col-lg-3">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3>Download</h3>
               <ul>
-                <li><strong>Category</strong> <span>Nature Photography</span></li>
-                <li><strong>Client</strong> <span>ASU Company</span></li>
-                <li><strong>Project date</strong> <span>01 March, 2022</span></li>
-                <li><strong>Project URL</strong> <a href="#">www.example.com</a></li>
-                <li><a href="#" class="btn-visit align-self-start">Visit Website</a></li>
+                <li><strong>Category</strong> <span>{{data.categories}}</span></li>
+
+                <li><a class="btn-visit align-self-start"><div id="imgAnchor"></div></a></li>
               </ul>
+
             </div>
           </div>
+
 
         </div>
 
@@ -91,5 +73,19 @@
     </section><!-- End Gallery Single Section -->
 
   </main><!-- End #main -->
+
+                    <script>
+            const imageLink = document.getElementById('img-link');
+            const anchorContainer = document.getElementById('imgAnchor');
+
+            let imgLink = imageLink.innerHTML;
+            imgLink = imgLink.split(' ').join('%20')
+            console.log(imgLink);
+
+            anchorContainer.insertAdjacentHTML('beforeend', `<a href="${imgLink}" download="file" style="color:white;">Download</a>`)
+
+
+        </script>
+
 
   {% endblock %}
