--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,8 @@
   <!-- Template Main CSS File -->
   <link href="/static/assets/css/main.css" rel="stylesheet">
 
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2991227931721463"
+     crossorigin="anonymous"></script>
   <!-- =======================================================
   * Template Name: PhotoFolio - v1.0.0
   * Template URL: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/
