--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,18 @@
 
 
         </div>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2991227931721463"
+     crossorigin="anonymous"></script>
+<!-- Blocks -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2991227931721463"
+     data-ad-slot="1862496950"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
       </div>
     </section><!-- End Gallery Section -->
 
