--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,11 @@
   <title>{{data3.Name}} Wallpapers</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
+  <meta content="Wallpaper" name="Wallpaper">
+  <meta content="4k" name="4k">
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2991227931721463"
+     crossorigin="anonymous"></script>
   <!-- Favicons -->
   <link href="/static/assets/img/img.png" rel="icon">
   <link href="/static/assets/img/img.png" rel="apple-touch-icon">
@@ -28,14 +32,7 @@
   <!-- Template Main CSS File -->
   <link href="/static/assets/css/main.css" rel="stylesheet">
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2991227931721463"
-     crossorigin="anonymous"></script>
-  <!-- =======================================================
-  * Template Name: PhotoFolio - v1.0.0
-  * Template URL: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+
 </head>
 
 <body>
