--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,8 @@
 	{% extends 'base.html' %}
 
 {% block 'content' %}
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2991227931721463"
+     crossorigin="anonymous"></script>
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="hero d-flex flex-column justify-content-center align-items-center" data-aos="fade" data-aos-delay="1500">
     <div class="container">
